--- a/Hilres.CSV/Hilres.CSV.csproj
+++ b/Hilres.CSV/Hilres.CSV.csproj
@@ -24,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
